[project]
name = "crud-project"
version = "0.1.0"
description = ""
authors = [
    {name = "santannajp",email = "sanannajp@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "sqlalchemy (>=2.0.49,<3.0.0)",
    "pydantic (>=2.13.4,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pyrefly]
ignore-missing-imports = ["*"]
