[project]
name = "crud-project"
version = "0.1.0"
description = ""
authors = [
    {name = "santannajp",email = "sanannajp@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "sqlalchemy (>=2.0.49,<3.0.0)",
    "pydantic[email] (>=2.13.4,<3.0.0)",
    "psycopg2 (>=2.9.12,<3.0.0)",
    "psycopg2-binary (>=2.9.12,<3.0.0)",
    "requests (>=2.34.1,<3.0.0)",
    "streamlit (>=1.57.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pyrefly]
ignore-missing-imports = ["*"]
